[package]
name = "icinga-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
eyre = "0.6.12"
reqwest = { version = "0.12.12", features = ["native-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
thiserror = "2.0.12"
tracing = "0.1.41"
